; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/util/extr_clauses.c_contain_subplans_walker.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/util/extr_clauses.c_contain_subplans_walker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SubPlan = common dso_local global i32 0, align 4
@AlternativeSubPlan = common dso_local global i32 0, align 4
@SubLink = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @contain_subplans_walker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @contain_subplans_walker(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %29

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* @SubPlan, align 4
  %12 = call i64 @IsA(i32* %10, i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %24, label %14

14:                                               ; preds = %9
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @AlternativeSubPlan, align 4
  %17 = call i64 @IsA(i32* %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %24, label %19

19:                                               ; preds = %14
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* @SubLink, align 4
  %22 = call i64 @IsA(i32* %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %19, %14, %9
  store i32 1, i32* %3, align 4
  br label %29

25:                                               ; preds = %19
  %26 = load i32*, i32** %4, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = call i32 @expression_tree_walker(i32* %26, i32 (i32*, i8*)* @contain_subplans_walker, i8* %27)
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %25, %24, %8
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @IsA(i32*, i32) #1

declare dso_local i32 @expression_tree_walker(i32*, i32 (i32*, i8*)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
